kubernetes/manifests/prod/apprise-consumer-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oci-apprise-consumer-prod
  namespace: analyplat
spec:
  gateways:
  # This tells the virtual service to use the gateway resource in your workspace.
  - egress-default/default-gateway
