kubernetes/manifests/prod/egress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apprise-consumer-egress-policy
  namespace: analyplat
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-egress: "true"
  policyTypes:
    - Egress
  egress:
    - {}
